# Exercism

./: .gitignore  README.md
8th/affine-cipher/: README.md
8th/anagram/: README.md
8th/armstrong-numbers/: README.md
8th/binary/: HELP.md  README.md
8th/collatz-conjecture/: README.md
8th/darts/: darts.8th
8th/gigasecond/: README.md  gigasecond.8th
8th/hamming/: README.md
8th/hello-world/: hello-world.8th
8th/kindergarten-garden/: README.md
8th/knapsack/: README.md
8th/leap/: README.md  leap.8th
8th/luhn/: README.md
8th/pangram/: README.md
8th/pop-count/: pop-count.8th
8th/pythagorean-triplet/: HELP.md  README.md
8th/raindrops/: README.md
8th/reverse-string/: README.md
8th/roman-numerals/: README.md
8th/sieve/: HELP.md
8th/spiral-matrix/: README.md
8th/triangle/: README.md
8th/trinary/: README.md
8th/two-fer/: README.md  two-fer.8th
8th/word-count/: README.md
8th/yacht/: README.md
abap/acronym/: HELP.md  README.md
abap/affine-cipher/: HELP.md  README.md
abap/anagram/: HELP.md  README.md  zcl_anagram.clas.abap
abap/armstrong-numbers/: HELP.md  README.md
abap/atbash-cipher/: HELP.md  README.md
abap/beer-song/: HELP.md  README.md
abap/binary-search/: HELP.md  README.md  package.devc.xml  zcl_binary_search.clas.abap  zcl_binary_search.clas.testclasses.abap
abap/book-store/: HELP.md  README.md
abap/clock/: HELP.md  README.md
abap/collatz-conjecture/: HELP.md  README.md
abap/crypto-square/: HELP.md  README.md
abap/custom-signs/: HELP.md  HINTS.md  README.md
abap/darts/: HELP.md  README.md  zcl_darts.clas.abap
abap/difference-of-squares/: HELP.md  README.md  zcl_difference_of_squares.clas.abap
abap/eliuds-eggs/: HELP.md  README.md
abap/elyses-enchantments/: HELP.md  README.md  zcl_elyses_enchantments.clas.abap
abap/etl/: HELP.md  README.md
abap/grains/: HELP.md  README.md  zcl_grains.clas.abap
abap/hamming/: HELP.md  README.md  zcl_hamming.clas.abap
abap/hello-world/: HELP.md  README.md
abap/high-scores/: HELP.md  README.md  zcl_high_scores.clas.abap
abap/isogram/: HELP.md  README.md  zcl_isogram.clas.abap
abap/itab-aggregation/: HELP.md  README.md
abap/itab-basics/: HELP.md  README.md
abap/itab-combination/: HELP.md  README.md
abap/itab-nesting/: HELP.md  README.md
abap/kindergarten-garden/: HELP.md  README.md
abap/knapsack/: HELP.md  README.md
abap/leap/: HELP.md  README.md  zcl_leap.clas.abap
abap/line-up/: HELP.md  README.md
abap/matrix/: HELP.md  README.md
abap/minesweeper/: HELP.md  README.md
abap/nth-prime/: HELP.md  README.md
abap/phone-number/: HELP.md  README.md
abap/prime-factors/: HELP.md  README.md
abap/protein-translation/: HELP.md  README.md
abap/raindrops/: HELP.md  README.md  zcl_raindrops.clas.abap
abap/resistor-color/: HELP.md  README.md  zcl_resistor_color.clas.abap
abap/resistor-color-duo/: HELP.md  README.md
abap/resistor-color-trio/: HELP.md  README.md
abap/reverse-string/: HELP.md  README.md  zcl_reverse_string.clas.abap
abap/rna-transcription/: HELP.md  README.md
abap/run-length-encoding/: HELP.md  README.md
abap/scrabble-score/: HELP.md  README.md  zcl_scrabble_score.clas.abap
abap/secret-handshake/: HELP.md  (+1 more)
c/acronym/: CMakeLists.txt  HELP.md  README.md  acronym.c  acronym.h  test_acronym.c
c/all-your-base/: CMakeLists.txt  HELP.md  README.md  all_your_base.c  all_your_base.h  test_all_your_base.c
c/allergies/: CMakeLists.txt  HELP.md  README.md  allergies.c  allergies.h  test_allergies.c
c/anagram/: CMakeLists.txt  HELP.md  README.md  anagram.c  anagram.h  test_anagram.c
c/armstrong-numbers/: CMakeLists.txt  HELP.md  README.md  armstrong_numbers.c  test_armstrong_numbers.c
c/atbash-cipher/: CMakeLists.txt  HELP.md  README.md  atbash_cipher.c  atbash_cipher.h  test_atbash_cipher.c
c/beer-song/: CMakeLists.txt  HELP.md  README.md  beer_song.c  beer_song.h  test_beer_song.c
c/binary/: CMakeLists.txt  HELP.md  binary.c  binary.h  test_binary.c
c/binary-search/: CMakeLists.txt  HELP.md  binary_search.c  test_binary_search.c
c/bob/: CMakeLists.txt  HELP.md  README.md  bob.c  bob.h  test_bob.c
c/clock/: CMakeLists.txt  clock.c  clock.h  test_clock.c
c/collatz-conjecture/: CMakeLists.txt  HELP.md  README.md  collatz_conjecture.c  collatz_conjecture.h
c/difference-of-squares/: CMakeLists.txt  HELP.md  difference_of_squares.c  test_difference_of_squares.c
c/dnd-character/: CMakeLists.txt  HELP.md  dnd_character.c  dnd_character.h  test_dnd_character.c
c/etl/: CMakeLists.txt  HELP.md  README.md  etl.c  etl.h  test_etl.c
c/grade-school/: CMakeLists.txt  HELP.md  grade_school.c  grade_school.h  test_grade_school.c
c/hamming/: CMakeLists.txt  HELP.md  hamming.c  test_hamming.c
c/high-scores/: CMakeLists.txt  HELP.md  README.md  high_scores.c  high_scores.h  test_high_scores.c
c/high-scores/test-framework/: unity.c  unity.h  unity_internals.h
c/isogram/: CMakeLists.txt  HELP.md  isogram.c  test_isogram.c
c/kindergarten-garden/: CMakeLists.txt  HELP.md  kindergarten_garden.c  kindergarten_garden.h  test_kindergarten_garden.c
c/largest-series-product/: CMakeLists.txt  HELP.md  README.md  largest_series_product.c  largest_series_product.h  test_largest_series_product.c
c/leap/: CMakeLists.txt  HELP.md  README.md  leap.c  test_leap.c
c/list-ops/: CMakeLists.txt  list_ops.c  test_list_ops.c
c/luhn/: CMakeLists.txt  README.md  luhn.c  luhn.h  test_luhn.c
c/matching-brackets/: CMakeLists.txt  HELP.md  README.md  matching_brackets.c  matching_brackets.h  test_matching_brackets.c
c/nth-prime/: CMakeLists.txt  HELP.md  README.md  nth_prime.c  nth_prime.h  test_nth_prime.c
c/nucleotide-count/: CMakeLists.txt  HELP.md  README.md  nucleotide_count.c  nucleotide_count.h  test_nucleotide_count.c
c/pangram/: CMakeLists.txt  README.md  pangram.c  pangram.h  test_pangram.c
c/perfect-numbers/: CMakeLists.txt  HELP.md  README.md  perfect_numbers.c  perfect_numbers.h  test_perfect_numbers.c
c/phone-number/: CMakeLists.txt  HELP.md  README.md  phone_number.c  phone_number.h  test_phone_number.c
(+14124 files in other folders)
